@@ -22,7 +22,7 @@
 #
 
 AC_PREREQ(2.57)
-AC_INIT(avarice, 2.0.20030819cvs)
+AC_INIT(avarice, 2.0.20030821cvs)
 AC_CONFIG_AUX_DIR([config-aux])
 AC_CONFIG_SRCDIR([src/main.cc])
 AC_CONFIG_HEADERS([src/autoconf.h:src/autoconf.hin])
@@ -112,6 +112,7 @@ AC_CONFIG_FILES([
 	scripts/Makefile
 	scripts/ice-gdb
 	src/Makefile
+	doc/Makefile
 	avarice.spec
 	Makefile])
 AC_OUTPUT
